--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,7 +32,7 @@
 
             <div class="col d-flex justify-content-end">
                 <div class="botao">
-                    <button class="px-lg-4 py-lg-1">Try It Free</button>
+                    <button class="px-lg-4 py-lg-1">Experimente Grátis</button>
                 </div>
             </div>
         </div>
@@ -44,10 +44,9 @@
                 <div class="row">
                     <div class="col">
                         <div class="bannerText d-flex flex-column align-items-center my-5 m-lg-5 pt-5 text-center">
-                            <h1>Build The Community Your Fans Will Love</h1>
+                            <h1>Construa a comunidade que seus fãs irão amar</h1>
                             <p class="py-lg-3 py-3 px-3">
-                                Huddle re-imagines the way we build communities. You have a voice, but so does 
-                                your audience. Create connections with your users as you engage in genuine discussion. 
+                                O Huddle reimagina a forma como construímos comunidades. Você tem uma voz, assim como a sua audiência. Crie conexões com seus usuários enquanto se envolve em discussões genuínas.
                             </p>
                             <button class="button py-3 py-lg-3 px-lg-5"><a href="">Get Started For Free</a></button>
                         </div>
