--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <p class="py-lg-3 py-3 px-3">
                                 O Huddle reimagina a forma como construímos comunidades. Você tem uma voz, assim como a sua audiência. Crie conexões com seus usuários enquanto se envolve em discussões genuínas.
                             </p>
-                            <button class="button py-3 py-lg-3 px-lg-5"><a href="">Get Started For Free</a></button>
+                            <button class="button py-3 py-lg-3 px-lg-5"><a href="">Comece agora</a></button>
                         </div>
                     </div>
                 </div>
